[package]
name = "dropletbox"
version = "0.1.0"
edition = "2024"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
boltz-client = "0.3.1"
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2", features = ["js"] }
lightning-invoice = "0.32.0"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.115"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.82", features = ["Request", "RequestInit", "Response", "Window", "Headers"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.65"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
incremental = false
